--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
       rgba(14, 13, 13, 0.2)
     ),
     /* bottom, image */
-    url(/images/xenia_back.jpg);
+    url(xenia_back.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% 70%;
