--- a/css/main.css
+++ b/css/main.css
@@ -371,8 +371,8 @@ position: relative;
 .about_me_page {
     display: grid;
     grid-template-columns: 200px 1fr;
-    height: 100vh;
-    overflow: hidden;
+    height: 100%;
+   
 }
 
 .text_about_me {
