--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,12 @@
+
+@media(max-width:600px) {
+    .about_me_page {
+        grid-template-columns: 1fr;
+        height: 100%;
+    }
+}
+
+
 @media(max-width:900px) {
 
     .main_text {
