--- a/css/media.css
+++ b/css/media.css
@@ -4,6 +4,18 @@
         grid-template-columns: 1fr;
         height: 100%;
     }
+    
+     .menu li.active a:after {
+    display: none;
+    }
+
+    .menu li.active a {
+        color: rgba(193, 62, 44, 1);
+    }
+
+    .menu li.active i {
+        color: rgba(193, 62, 44, 1);
+    }
 }
 
 
