--- a/css/main.css
+++ b/css/main.css
@@ -371,7 +371,7 @@ position: relative;
 .about_me_page {
     display: grid;
     grid-template-columns: 200px 1fr;
-    height: 100%;
+    height: 100vh;
    
 }
 
