--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,9 @@
     box-sizing: border-box;
 }
 
-
+html {
+	scroll-behavior: smooth;
+}
 
 
 .main_text {
@@ -54,6 +56,7 @@
     
 }
 
+
 .main_phrase button {
     margin-top: 30px;
     padding: 5px 10px;
@@ -92,8 +95,13 @@
     display: fixed; 
 }
 
+#home {
+	height: auto;
+}
 
-
+#about_me {
+	height: auto;
+}
 
 
 .about_me {
