--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ html {
     height: 100vh;
     width: 100%; 
     position: relative;
-    z-index: 2;
+    z-index: 2;	
     
 }
 
@@ -368,7 +368,7 @@ position: relative;
     overflow: scroll;
 }
 
-.about_me_page {
+#about_me_page {
     display: grid;
     grid-template-columns: 200px 1fr;
     height: 100vh;
