--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,6 @@
     box-sizing: border-box;
 }
 
-html {
-	scroll-behavior: smooth;
-}
-
 
 .main_text {
     
@@ -18,7 +14,7 @@ html {
       rgba(14, 13, 13, 0.2)
     ),
     /* bottom, image */
-    url(xenia_back.jpg);
+    url(../images/xenia_back.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% 70%;
@@ -26,7 +22,7 @@ html {
     height: 100vh;
     width: 100%; 
     position: relative;
-    z-index: 2;	
+    z-index: 2;
     
 }
 
@@ -55,7 +51,6 @@ html {
     color: white;
     
 }
-
 
 .main_phrase button {
     margin-top: 30px;
@@ -96,7 +91,10 @@ html {
 }
 
 
-#about_me {
+
+
+
+.about_me {
  
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -371,7 +369,7 @@ position: relative;
 .about_me_page {
     display: grid;
     grid-template-columns: 200px 1fr;
-    height: 100vh;
+    height: 100%;
    
 }
 
@@ -1113,8 +1111,11 @@ html.is-animating .transition-fade {
   .container {
     width: 100%;
     height: 100%;
+    /* CSS Smooth Scroll */
     overflow-y: scroll; 
-
+   
+   
   }
   
 
+  
