--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,17 @@
     
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+#home {
+	height: 800px
+}
+
+#about_me {
+	height: 800px
+}
 
 
 .main_phrase {
