--- a/css/main.css
+++ b/css/main.css
@@ -295,7 +295,7 @@ position: relative;
 
 
 .progress-title{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     color: #666;
     margin-left: 5px;
@@ -366,18 +366,18 @@ position: relative;
     display: grid;
     grid-template-columns: 200px 1fr;
    
-    overflow: scroll;
+    overflow: scroll !important
 }
 
 .about_me_page {
     display: grid;
     grid-template-columns: 200px 1fr;
-    height: 100%;
+    height: 100vh;
    
 }
 
 .text_about_me {
-    font-size: 15px;
+  
     font-family: 'PT Sans', Helvetica, sans-serif;
     width: 70%;
     text-align: center;
@@ -556,9 +556,19 @@ position: relative;
     background-color: #f5f5f5;
 }
 
+
+.portfolio-page {
+    width: 100%;
+    height: 100%;
+    padding-left: 35px;
+    overflow: scroll;
+    box-sizing: border-box;
+    background-color: #f5f5f5;
+}
+
 .page_about_me {
     width: 100%;
-  
+    height: 100%;
     padding-left: 35px;
     overflow-x: hidden;
     
@@ -572,6 +582,14 @@ position: relative;
     z-index: 90;
     visibility: visible;
     background: white;
+}
+
+.subpage-portfolio {
+    opacity: 1;
+  
+    z-index: 90;
+    visibility: visible;
+   
 }
 
 .subpage_about_me {
@@ -601,7 +619,7 @@ position: relative;
     position: relative;
     font-family: Oswald, Helvetica, sans-serif;
     font-weight: 300;
-    font-size: 15px;
+    font-size: 17px;
     color: #fff;
    
     line-height: 20px;
@@ -640,6 +658,7 @@ position: relative;
     font-size: 18px;
 }
 
+
 .time-line_coding {
     position: relative;
    
@@ -664,14 +683,23 @@ position: relative;
 .education_title h2 {
    display: inline-block;
     font-size: 22px;
+    padding-top: 20px;
     font-family: Oswald, Helvetica, sans-serif;
     font-weight: 500;
-    padding-top: 20px;
     margin-bottom: 20px;
     margin-left: 30px; 
 }
 
-.education_title h2:after {
+.education_title_skills h2 {
+    display: inline-block;
+     font-size: 22px;
+     font-family: Oswald, Helvetica, sans-serif;
+     font-weight: 500;
+     margin-bottom: 10px;
+     margin-left: 30px; 
+ }
+
+.education_title_skills h2:after {
     content: "";
   width: 100%;
     height: 1px;
@@ -681,7 +709,7 @@ position: relative;
 }
 
 .time-line p {
-    font-size: 13px;
+    font-size: 14px;
     color: #666;
    
    
@@ -957,12 +985,20 @@ width: auto;
   transition-duration: 0.3s;
   transition-delay: 0s;
 }
-.tiles .tile .details .title {
+.tiles .tile .title {
  
   font-size: 16px;
 
+
   font-family: 'PT Sans', Helvetica, sans-serif;
 }
+
+.details .title {
+ 
+    font-size: 16px;
+ 
+    font-family: 'PT Sans', Helvetica, sans-serif;
+  }
 
 .tiles .tile .details .title:after {
     display: block;
@@ -1070,7 +1106,7 @@ textarea {
 
 .contact_title h2 {
      display: inline-block;
-     font-size: 18px;
+     font-size: 20px;
      font-family: Oswald, Helvetica, sans-serif;
      font-weight: 500;
      margin-bottom: 20px;
