--- a/css/media.css
+++ b/css/media.css
@@ -2,7 +2,7 @@
 @media(max-width:600px) {
     .about_me_page {
         grid-template-columns: 1fr;
-        height: 100%;
+        height: 100vh;
     }
     
      .menu li.active a:after {
