--- a/css/media.css
+++ b/css/media.css
@@ -1,223 +1,43 @@
-
-@media(max-width:600px) {
-    html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+@media (max-width: 900px) {
+    .main_text {
+        background: linear-gradient(hsla(0, 85%, 3%, 0.3), rgba(14, 13, 13, 0.2)), url(xenia_back.jpg) center/cover no-repeat;
+    }
 }
 
-    .about_me_page {
-    grid-template-columns: 1fr;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+@media (max-width: 600px) {
+    .main_text {
+        height: 100vh;
     }
-    
-     .menu li.active a:after {
-    display: none;
+
+    .about_me_page {
+        flex-direction: column;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .burger-menu {
+        display: block;
+    }
+
+    .burger-menu ul {
+        display: none;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .burger-menu input[type="checkbox"]:checked ~ ul {
+        display: block;
     }
 
     .menu li.active a {
         color: rgba(193, 62, 44, 1);
     }
 
-    .menu li.active i {
-        color: rgba(193, 62, 44, 1);
-    }
-}
-
-
-@media(max-width:900px) {
-
-    html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-
-
-    .main_text {
-    
-        background:
-        /* top, transparent black, faked with gradient */ 
-        linear-gradient(
-          hsla(0, 85%, 3%, 0.3), 
-          rgba(14, 13, 13, 0.2)
-        ),
-        /* bottom, image */
-        url(xenia_back.jpg);
-      
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        background-origin: border-box;
-        height: 100vh;
-        width: 100%; 
-        position: relative;
-        z-index: 2;
-        
-       
-    }
-    
-    .main_phrase {
-        position: relative;
-        top: 35%;
-        width: 100%;
-        text-align: center;
-        font-family: 'Playfair Display', serif;
-        font-weight: normal;
-        font-size: 20px;
-        letter-spacing: 1px;
-        color: #EAE8E8;
-    }
-    .main_phrase h1 {
-        font-size: 45px;
-        font-weight: 800;
-        letter-spacing: 3px;
-        margin-bottom: 30px;
-    }
-
-
-    .contact_page {
-        display: grid;
-        grid-template-columns: 1fr;
-        height: 100vh;
-    }
-
-    .nav {
-        display: none;
-    }
-
-
-    .section_about_me {
-        grid-template-columns: 1fr;
-    }
-
-    .time-line {
-       margin-right: 15px;
-    }
-
-    .section_contact {
-        
-        grid-template-columns: 1fr;
-        
-    }
-
-    .section_about_me {
-        justify-items: start;
-    }
-    
-    .time-line_coding {
-        margin-left: 40px;
-    }
-
     .fun_facts_icons {
+        display: grid;
         grid-template-columns: 1fr 1fr;
     }
-
-  
-
-
-
 }
-
-
-
-@media(min-width:600px) {
-
-     
-   
-
-    .contact_page {
-        display: grid;
-        grid-template-columns: 200px 1fr;
-        width: 100%;
-        height: 100vh;
-    }
-
-    .nav {
-        display: block;
-    }
-
-}
-
-
-
-@media (min-width:800px){
-    .nav {
-        background: white;
-        z-index: 1;  
-        display: block; 
-    }
-
-    .contact_page {
-        display: grid;
-        grid-template-columns: 200px 1fr;
-    }
- 
-}
-
-
-@media (max-width: 600px) {
-
-    .burger-menu {
-        margin-top: 25px;
-        display: block;
-    }
-
-    .burger-menu ul {
-        display: none;
-        color: white;
-        list-style: none;
-        width: 100%;
-        margin-top: 15px;
-        margin-left: 15px;
-        padding: 0;
-        font-size: 13px;
-        letter-spacing: 1px; 
-        text-transform: uppercase; 
-        line-height: 50px;
-        font-family: Roboto, sans-serif;
-        cursor: pointer;
-        position: relative;
-    }
-
-    .burger-menu a {
-        color: black;
-        text-decoration: none;
-        }
-        
-    .burger-menu li:hover {
-            background: #fcfcfc;
-        }
-        
-    .burger-menu li a {
-         position: relative;
-        }
-
-   
-
-    .nav {
-        display: none;
-    }
-
-    .nav_burger label.toggleMenu {
-        display: block;
-      
-    }
-
-    input.toggleMenu:checked + label.toggleMenu {
-        background: rgba(193, 62, 44, 0.6);
-        color: #fff;
-    }
-
-    input.toggleMenu:checked ~ ul {
-        display: block;
-    }
-
-
-
-}
-
-
-
